--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -52,7 +52,7 @@ jobs:
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
       - name: Build with Hugo
         env:
-          # For maximum backward compatibility with Hugo modules
+          # For maximum backward compatibility with Hugo modules. See https://gohugo.io/hugo-modules/configuration/
           HUGO_ENVIRONMENT: production
           HUGO_ENV: production
         run: |
@@ -65,7 +65,7 @@ jobs:
         with:
           path: ./public
 
-  # Deployment job
+  # Deployment job, triggered by the build job
   deploy:
     environment:
       name: github-pages
